--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,9 @@ services:
   db:
     image: postgres
     environment: 
-      POSTGRES_PASSWORD: Carbono12.
-      POSTGRES_USER: jhonnatha_am
-      POSTGRES_DB: db_name
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_DB: ${DB_NAME}
     volumes: 
       - ./pgdata:/var/lib/postgresql/data
     ports: 
